--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "react-dom": "^16.7.0",
     "react-facebook": "^6.0.15",
     "react-grid-gallery": "^0.5.3",
+    "react-instagram-embed": "^1.5.0",
     "react-player": "^1.9.3",
     "react-protected-mailto": "^1.0.3",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.5",
     "reactstrap": "^7.1.0"
   },
   "scripts": {
