--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "firebase": "^5.8.4",
     "react": "^16.7.0",
     "react-calendar": "^2.18.1",
-    "react-dom": "^16.7.0",
+    "react-dom": "^16.8.3",
     "react-facebook": "^6.0.15",
     "react-grid-gallery": "^0.5.3",
+    "react-images": "^0.5.19",
     "react-instagram-embed": "^1.5.0",
     "react-mail-form": "^1.0.2",
     "react-photo-gallery": "^6.3.2",
